--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
   "functions": {
-    "pages/api/press-releases.js": {
+    "api/press-releases.js": {
       "maxDuration": 30
     }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/pages/api/$1"
-    }
-  ]
+  }
 }
